DDE_PROD/2026-03-25/files/home/ec2-user/k8s-prod/loader-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loader
  template:
    metadata:
      labels:
        app: loader
    spec:
      containers:
        - name: loader
          image: 195116001166.dkr.ecr.af-south-1.amazonaws.com/dde-ecr:loader
          imagePullPolicy: Always
