DDE_PROD/2026-03-25/files/home/ec2-user/k8s-prod/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: 195116001166.dkr.ecr.af-south-1.amazonaws.com/dde-ecr:worker
          imagePullPolicy: Always
