DDE_PROD/2026-03-25/files/home/ec2-user/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - "dde.vodacom.co.za"
  #     secretName: dde-vodacom-tls
  rules:
    - host: dde.vodacom.co.za
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: dde-serv
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-serv
                port:
                  number: 80
